Point CARP repos to respective branches

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,15 +94,15 @@ umbrella_opt_default (CH_PLACEMENT_TAG "97fd3158")    # Jul 2019
 umbrella_opt_default (DELTAFS_COMMON_TAG "v19.8")
 umbrella_opt_default (DELTAFS_NEXUS_TAG "v1.19")
 umbrella_opt_default (DELTAFS_SHUFFLE_TAG "bba0a2f6") # Feb 2020
-umbrella_opt_default (DELTAFS_VPIC_PRELOAD_TAG "v1.86")
-umbrella_opt_default (DELTAFS_TAG "v2019.7")
+umbrella_opt_default (DELTAFS_VPIC_PRELOAD_TAG "refactor-carp")
+umbrella_opt_default (DELTAFS_TAG "range-writer")
 umbrella_opt_default (MERCURY_PROGRESSOR_TAG "6892c220") # Oct 2020
 umbrella_opt_default (MERCURY_RUNNER_TAG "381abae2")  # Oct 2020
 umbrella_opt_default (MERCURY_TAG "df2fef78")         # Oct 2020
 umbrella_opt_default (MSSG_TAG "v1.4")
 umbrella_opt_default (NEXUS_RUNNER_TAG "40003c0d")    # Feb 2020
 umbrella_opt_default (OFI_TAG "a593d160")             # Jun 2019
-umbrella_opt_default (PDLFS_SCRIPTS_TAG "main")
+umbrella_opt_default (PDLFS_SCRIPTS_TAG "carp")
 
 #
 # vpic selection.  vpic407 is the old depreciated vpic code base.
