change pdlfs-common tag to v19.8 because of some include errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,7 +94,7 @@ umbrella_opt_default (CARP_TAG "master")
 umbrella_opt_default (CH_PLACEMENT_TAG "ab096ee0")    # Feb 2022
 # for deltafs-common, use the commit before we updated
 # the logging to glog v0.7.0
-umbrella_opt_default (DELTAFS_COMMON_TAG "a495ed8")
+umbrella_opt_default (DELTAFS_COMMON_TAG "v19.8")
 umbrella_opt_default (DELTAFS_NEXUS_TAG "v1.19")
 umbrella_opt_default (DELTAFS_SHUFFLE_TAG "a20890d9") # Apr 2021
 umbrella_opt_default (DELTAFS_VPIC_PRELOAD_TAG "master")
