--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,15 +90,15 @@ list(APPEND UMBRELLA_CMAKECACHE
 # set git tags to the versions we want to stick to by default...
 #
 umbrella_opt_default (BMI_TAG "6ea0b78f")             # Jan 2020
-umbrella_opt_default (CARP_TAG "master")
+umbrella_opt_default (CARP_TAG "v1.0")
 umbrella_opt_default (CH_PLACEMENT_TAG "ab096ee0")    # Feb 2022
 # for deltafs-common, use the commit before we updated
 # the logging to glog v0.7.0
-umbrella_opt_default (DELTAFS_COMMON_TAG "master")
+umbrella_opt_default (DELTAFS_COMMON_TAG "v24.0")
 umbrella_opt_default (DELTAFS_NEXUS_TAG "v1.19")
 umbrella_opt_default (DELTAFS_SHUFFLE_TAG "a20890d9") # Apr 2021
-umbrella_opt_default (DELTAFS_VPIC_PRELOAD_TAG "master")
-umbrella_opt_default (DELTAFS_TAG "master")
+umbrella_opt_default (DELTAFS_VPIC_PRELOAD_TAG "v2.0")
+umbrella_opt_default (DELTAFS_TAG "v2024.0")
 # HDF5/H5PART only used if CARP_H5PART turned on
 umbrella_opt_default (HDF5_TAG "develop")
 umbrella_opt_default (H5PART_TAG "master")
@@ -109,7 +109,7 @@ umbrella_opt_default (MSSG_TAG "v1.4")
 umbrella_opt_default (NEXUS_RUNNER_TAG "04ee7e8a")    # Apr 2021
 umbrella_opt_default (OFI_TAG "1a89deaa")             # Feb 2022
 umbrella_opt_default (ONETBB_TAG "6666292f")          # Feb 2022
-umbrella_opt_default (PDLFS_SCRIPTS_TAG "carp")
+umbrella_opt_default (PDLFS_SCRIPTS_TAG "carpv1.0")
 umbrella_opt_default (GLOG_TAG "v0.6.0")
 
 #
